<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name" translatable="false">&appName;</string>
    <string name="app_name_debug" translatable="false">&appName; (debug)</string>
    <string name="user_agent_app_name" translatable="false">&appName;Android</string>
    <string name="service_name">&appName; Service</string>
    <string name="service_auto_start_description">&appName; has been started automatically</string>
    <string name="service_description">This is required to receive calls while in background</string>
    <string name="sync_account_name">&appName; contacts</string>
    <string name="slide_1_title">OnuKit Privacy Policy</string>
    <string name="slide_1_desc">OnuKit is a call center alternative for SME and SoHo businesses to cater customer service better using  smartphone on the GO.\n\n
      Please allow the following permissions to make OnuKit Functional.
    </string>
    <string name="slide_2_title">Call and Call Log Read Permission</string>
    <string name="slide_2_desc">OnuKit lets you make calls using mobile number to your clients, contacts, leads or for telemarketing from web panel or google sheet.\n\n
      Also OnuKit mobile app let you make task against your clients calls. So OnuKit needs to read your call data. You can create task easily by allowing this permission.</string>
    <string name="slide_2_1_title">Call Log Read Permission</string>
    <string name="slide_2_1_desc">Also OnuKit mobile app let you make task against your clients calls. So OnuKit need to access your read call data, you can create task easily by allow this permission.</string>
    <string name="slide_3_title">SMS Permission</string>
    <string name="slide_3_desc">Read your SMS from anywhere and send Single or bulk SMS with schedule option to your client in one click by allowing this permission.</string>
    <string name="slide_4_title">Contact Permission</string>
    <string name="slide_4_desc">Backup, Organize, share and identify your contacts from both web and phone using OnuKit with the ensurity of your privacy.</string>
    <string name="slide_5_title">Microphone Permission</string>
    <string name="slide_5_desc">Ever needed the option of automatic call recording in your phone? Then OnuKit is the answer to back them and retrieve them anytime-anywhere just allowing this permission.</string>
    <string name="slide_6_title">Storage  Permission</string>
    <string name="slide_6_desc">Let OnuKit save the necessary data and recording files locally, also synchronize to online account by allowing this permission. </string>
    <string name="slide_6a_title">Background-Sync  Permission</string>
    <string name="slide_6a_desc">Let OnuKit sync with the server in background and receive calls consistently, even if the app is closed.</string>
    <string name="slide_7_title">Popup Permission</string>
    <string name="slide_7_desc">OnuKit gives you task management facility on the go with a popup for incoming calls obviously with your permission.</string>
    <string name="about_link" translatable="false">https://user.onukit.com</string>
    <string name="about_privacy_policy_link" translatable="false">https://www.linphone.org/privacy-policy</string>
    <string name="about_license_link" translatable="false">https://www.gnu.org/licenses/gpl-3.0.html</string>
    <string name="about_version" translatable="false">&appName; Android %s</string>
    <string name="about_liblinphone_sdk_version" translatable="false">Linphone SDK %s</string>
    <string name="about_privacy_policy">Visit our privacy policy</string>
    <string name="about_text" translatable="false">GNU General Public License v3.0\n © 2010–2022 Belledonne Communications</string>
    <string name="about_weblate_link" translatable="false">https://weblate.linphone.org/projects/linphone/</string>
    <string name="about_weblate_translation">Help us translate &appName;</string>
    <string name="logs_upload_failure">Failed to upload logs!</string>
    <string name="logs_reset_complete">Logs have been cleared</string>
    <string name="logs_url_copied_to_clipboard">Logs URL copied into clipboard</string>
    <string name="about_bugreport_email" translatable="false">linphone-android@belledonne-communications.com</string>
    <string name="phone_number">Phone number</string>
    <string name="phone_numbers">Phone numbers</string>
    <string name="select_your_country">Select your country</string>
    <string name="international_prefix">Prefix</string>
    <string name="assistant_choose_country">Choose a country</string>
    <string name="assistant_choose_country_title">Country name or prefix</string>
    <string name="onukit_username">Onukit Username</string>
    <string name="onukit_password">Onukit Password</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="domain">Domain</string>
    <string name="sip_address">SIP address</string>
    <string name="sip_addresses">SIP addresses</string>
    <string name="cancel">Cancel</string>
    <plurals name="days">
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>
    <string name="share_uploaded_logs_link">Share logs link using…</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="transport">Transport</string>
    <string name="transport_udp">UDP</string>
    <string name="transport_tcp">TCP</string>
    <string name="transport_tls">TLS</string>
    <string name="app_description">Call Center In Your Pocket</string>
    <string name="status_connected">Connected</string>
    <string name="status_not_connected">Not connected</string>
    <string name="status_in_progress">Connection in progress</string>
    <string name="status_error">Connection failed</string>
    <string name="no_account_configured">No account configured</string>
    <string name="autostart_request">Having problems with calls?</string>
    <string name="about">About</string>
    <string name="assistant">Assistant</string>
    <string name="recordings">Recordings</string>
    <string name="settings">Settings</string>
    <string name="quit">Quit</string>
    <string name="history_calls_list">Calls</string>
    <string name="no_call_history">No call in your history</string>
    <string name="no_missed_call_history">No missed call in your history</string>
    <string name="no_conference_call_history">No meeting call in your history</string>
    <string name="history_delete_one_dialog">Do you want to delete this record?</string>
    <string name="history_delete_many_dialog">Do you want to delete these records?</string>
    <plurals name="history_delete_dialog" translatable="false">
        <item quantity="one">@string/history_delete_one_dialog</item>
        <item quantity="other">@string/history_delete_many_dialog</item>
    </plurals>
    <string name="contact_invite_friend">Invite</string>
    <string name="no_contact">No contact in your address book.</string>
    <string name="no_sip_contact">No SIP contact in your address book.</string>
    <string name="contact_filter_hint">Search contacts</string>
    <string name="contact_send_sms_invite_text">Hello, join me on &appName;! You can download it for free at %s</string>
    <string name="contact_send_sms_invite_download_link" translatable="false">https://linphone.org/download</string>
    <string name="contact_last_name">Last name</string>
    <string name="contact_first_name">First name</string>
    <string name="contact_organization">Organization</string>
    <string name="contact_choose_existing_or_new_to_add_number">Select a contact or create a new one</string>
    <string name="contact_editor_write_permission_denied">Write Contacts permission denied, can\'t edit contact</string>
    <string name="contact_delete_one_dialog">Do you want to delete this contact?\nIt will also be removed from your device addressbook</string>
    <string name="contact_delete_many_dialog">Are you sure you want to delete these contacts?\nThey will also be removed from your device addressbook</string>
    <plurals name="contact_delete_dialog" translatable="false">
        <item quantity="one">@string/contact_delete_one_dialog</item>
        <item quantity="other">@string/contact_delete_many_dialog</item>
    </plurals>
    <string name="contact_new_choose_sync_account">Choose where to save the contact</string>
    <string name="contact_local_sync_account">Store locally</string>
    <string name="contact_cant_be_deleted">This contact can\'t be deleted</string>
    <string name="contacts_ldap_query_more_results_available">More results are available, refine your search</string>
    <string name="dialer_address_bar_hint">Enter a number or an address</string>
    <string name="debug_popup_title">Debug</string>
    <string name="debug_popup_enable_logs">Enable logs</string>
    <string name="debug_popup_disable_logs">Disable logs</string>
    <string name="debug_popup_send_logs">Send logs</string>
    <string name="debug_popup_show_config_file">View config file</string>
    <string-array name="popup_send_log" translatable="false">
        <item>@string/debug_popup_disable_logs</item>
        <item>@string/debug_popup_send_logs</item>
        <item>@string/debug_popup_show_config_file</item>
        <item>@string/cancel</item>
    </string-array>
    <string-array name="popup_enable_log" translatable="false">
        <item>@string/debug_popup_enable_logs</item>
        <item>@string/debug_popup_show_config_file</item>
        <item>@string/cancel</item>
    </string-array>
    <string name="dialer_transfer_succeded">Call is being transferred</string>
    <string name="dialer_transfer_failed">Can\'t transfer call</string>
    <string name="no_chat_history">No conversations</string>
    <string name="chat_remote_is_composing">Remote is writing&#8230;</string>
    <string name="chat_event_conference_created">You have joined the group</string>
    <string name="chat_event_conference_destroyed">You have left the group</string>
    <string name="chat_event_participant_added">%s has joined</string>
    <string name="chat_event_participant_removed">%s has left</string>
    <string name="chat_event_device_added">new device for %s</string>
    <string name="chat_event_device_removed">device for %s removed</string>
    <string name="chat_event_subject_changed">new subject: %s</string>
    <string name="chat_event_admin_set">%s is admin</string>
    <string name="chat_event_admin_unset">%s is no longer admin</string>
    <string name="chat_security_event_lime_identity_key_changed">LIME identity key changed for %s</string>
    <string name="chat_security_event_man_in_the_middle_detected">Man-in-the-middle attack detected for %s</string>
    <string name="chat_security_event_security_level_downgraded">Security level decreased because of %s</string>
    <string name="chat_security_event_participant_max_count_exceeded">Max participant count exceeded by %s</string>
    <string name="chat_event_ephemeral_disabled">You disabled ephemeral messages</string>
    <string name="dialog_accept">Accept</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="signed_out">Signed out</string>
    <string name="mobile_no">Mobile Number</string>
    <string name="mobile_no_hint">01xxxxxxxxx</string>
    <string name="detailed_description">Detailed Description</string>
    <string name="detailed_description_hint">Caller had a suggestion about X.</string>
    <string name="task_purpose">Task Purpose</string>
    <string name="caller_name_client_name">Caller Name/Client name</string>
    <string name="caller_name_client_name_hint">Mr/Mrs/Ms X</string>
    <string name="task_status">Task Status</string>
</resources>